Prevents radio bars from bleeding

--- a/components/_form.scss
+++ b/components/_form.scss
@@ -54,6 +54,7 @@
       display: block;
       margin-top: 0.2em;
       width: 100%;
+      box-sizing: border-box;
       font-weight: #{$font-weight-normal};
     }
   }
